--- a/flujo/funciones/funciones_callback.html
+++ b/flujo/funciones/funciones_callback.html
@@ -12,7 +12,7 @@
         /* Una funcion de callback es una funcion que se pasa por parametro a otra funcion*/
 
         function saludar(pNombre){
-            console.log('Hola ' + pNombre);
+            alert('Hola ' + pNombre);
         }
 
         function getUser(){
@@ -23,6 +23,14 @@
 
         saludar(getUser()); // funcion de callback getUser();
 
+        // funcion anonimas como callback
+
+        var saludo = function (nombre){
+
+            alert('Hola ' + nombre);
+        }
+
+        saludo('Anton');
         
     </script>
     
