--- a/Ejercicios PDF/ejercicio5.html
+++ b/Ejercicios PDF/ejercicio5.html
@@ -20,7 +20,7 @@ número primo sólo es divisible por el mismo y por la unidad). */
 
         alert('El numero introducido es primo');
 
-    } else if(numero%2!=0 && numero%numero==0){
+    } else if(numero%2!=0 && numero%3!=0){
 
         alert('El numero introducido es primo');
 
