Avance ejercicio TODO

--- a/Ejercicios/TODO/index.html
+++ b/Ejercicios/TODO/index.html
@@ -19,7 +19,7 @@
                         <option value="diaria">Diaria</option>
                         <option value="mensual">Mensual</option>
                     </select>
-                    <input type="submit" value="GUARDAR">
+                    <input type="submit" value="GUARDAR" id="guardar">
                 </form>
                 <p id="mensaje"></p>
             </div>
@@ -58,6 +58,8 @@
         </main>
         <footer><p>TODO APP DE JAVI &copy; 2019</p></footer>
     </div>
-    
+    <script src="js/modelo.js"></script>
+    <script src="js/eventos.js"></script>
+    <script src="js/logica.js"></script>
 </body>
 </html>
