--- a/Ejercicios/TODO/index.html
+++ b/Ejercicios/TODO/index.html
@@ -56,7 +56,7 @@
                 </article> -->
             </section>
         </main>
-        <footer><p>TODO APP DE JAVI &copy; 2019</p></footer>
+        <footer><p>ToDo app de Javi &copy; 2019</p></footer>
     </div>
     <script src="js/modelo.js"></script>
     <script src="js/eventos.js"></script>
