--- a/Ejercicios/TODO/index.html
+++ b/Ejercicios/TODO/index.html
@@ -35,9 +35,9 @@
         </header>
         <main>
             <section class="notareas" id="notareas">
-                <!-- <article>
-                        <h2>NO HAY TAREAS</h2>
-                </article> -->
+                <article>
+                    <h2>NO HAY TAREAS</h2>
+                </article>
             </section>
             <section class="tareas">
                 <!-- <article class="urgente">
@@ -56,7 +56,7 @@
                 </article> -->
             </section>
         </main>
-        <footer><p>ToDo app de Javi &copy; 2019</p></footer>
+        <footer><p>To_Do app de Javi &copy; 2019</p></footer>
     </div>
     <script src="js/modelo.js"></script>
     <script src="js/eventos.js"></script>
