--- a/jquery/galeria_responsive/index.html
+++ b/jquery/galeria_responsive/index.html
@@ -70,6 +70,19 @@
         </div>
     </footer>
 
+   <!--  <div class="modal">
+        <div class="manto">
+            <div class="contenedor">
+                <img src="images/g-architecture.jpg">
+                <h4>User experience - dinamicos</h4>
+                <h3>Architechture</h3>
+                <div class="cerrar">
+                    <img src="images/cerrar.png" alt="cerrar">
+                </div>
+            </div>
+        </div>
+    </div> -->
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/galeria.js"></script>
 </body>
